--- a/IoT/platformio.ini
+++ b/IoT/platformio.ini
@@ -1,4 +1,4 @@
-; AWS IoT EduKit Smart Thermostat PlatformIO Configuration File
+; CleaningTracker PlatformIO Configuration File
 [platformio]
 src_dir = main
 
